--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ a:hover {
     }
 }
 
-.navbar {
+.navbar1{
     position: fixed;
     top: 0;
     left: 0;
@@ -156,7 +156,7 @@ a:hover {
     box-sizing: border-box;
 }
 
-.navbar .logo {
+.navbar1 .logo {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -166,12 +166,12 @@ a:hover {
     text-decoration: none;
 }
 
-.navbar .logo:hover {
+.navbar1 .logo:hover {
 
     text-decoration: none;
 }
 
-.navbar .nav-left {
+.navbar1 .nav-left {
     display: flex;
     align-items: center;
     flex-grow: 1;
@@ -180,7 +180,7 @@ a:hover {
 }
 
 
-.navbar .nav-right {
+.navbar1 .nav-right {
     display: flex;
     align-items: center;
     flex-grow: 1;
@@ -188,14 +188,14 @@ a:hover {
     max-width: 33%;
 }
 
-.navbar .nav-right a {
+.navbar1 .nav-right a {
     color: white;
     text-decoration: none;
     font-size: 20px;
     margin-left: 40px;
 }
 
-.navbar a:hover {
+.navbar1 a:hover {
     text-decoration: underline;
 }
 
@@ -205,7 +205,7 @@ a:hover {
     z-index: 1000;
 }
 
-.navbar .dropbtn {
+.navbar1 .dropbtn {
     font-size: 20px;
     border: none;
     outline: none;
@@ -217,12 +217,12 @@ a:hover {
     cursor: pointer;
 }
 
-.navbar .dropdown {
+.navbar1 .dropdown1{
     float: left;
     overflow: hidden;
 }
 
-.navbar .dropdown-content {
+.navbar1 .dropdown-content {
     display: none;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.177);
@@ -234,7 +234,7 @@ a:hover {
     border-radius: 2px;
 }
 
-.navbar .dropdown-content a {
+.navbar1 .dropdown-content a {
     float: none;
     color: #fff;
     padding: 12px 16px;
@@ -243,13 +243,13 @@ a:hover {
     text-align: left;
 }
 
-.navbar .dropdown-content a:hover {
+.navbar1 .dropdown-content a:hover {
     background-color: #ffffff34;
 }
 
 
 /* Show the dropdown menu on hover */
-.navbar .dropdown:hover .dropdown-content {
+.navbar1 .dropdown1:hover .dropdown-content {
     display: block;
     height: auto; 
 }
