--- a/styles.css
+++ b/styles.css
@@ -314,3 +314,68 @@ section{
     width: 50px;
     height: 50px;
 }
+
+#collaborators {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/verde2.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 60px 0;
+    color: white;
+    text-align: center;
+}
+
+.card-client {
+    background: rgba(70, 70, 70, 0.37);
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    margin: 20px 0;
+    transition: transform 0.3s ease-in-out;
+}
+
+.card-client:hover {
+    transform: scale(1.05);
+}
+
+.user-picture img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 15px;
+}
+
+.name-client {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.name-client span {
+    display: block;
+    font-size: 14px;
+    color: #ddd;
+}
+
+.social-media a {
+    margin: 0 10px;
+    color: white;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.social-media a:hover {
+    color: #ffcc00;
+}
+.tooltip {
+    position: absolute;
+    background-color: #333;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+.show-tooltip {
+    opacity: 1;
+}
