--- a/styles.css
+++ b/styles.css
@@ -282,9 +282,10 @@ section{
 /* Opcional: Cambiar el fondo de los botones a negro */
 .carousel-control-prev,
 .carousel-control-next {
-    background-color: rgba(114, 113, 113, 0.5); /* Ajusta la opacidad si lo deseas */
+    background-color: rgb(248, 244, 244); /* Ajusta la opacidad si lo deseas */
     margin: 25%;
     border-radius: 50%; /* Hace los botones más estilizados */
     width: 50px;
+    color: #000;
     height: 50px;
 }
