--- a/styles.css
+++ b/styles.css
@@ -257,43 +257,76 @@ section{
     min-height: 100vh;
 }
 
+
 .whatis {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    margin: 0 auto;
     padding: 20px;
-}
-
-.texto {
-    width: 50%;
-    padding: 20px;
-    text-align: justify;
-}
-
-.texto h2 {
-    color: #007bff;
-    margin-bottom: 10px;
-    font-size: 40px;
-}
-
-.texto p {
-    font-size: 20px;
-    color: #333;
+    height: 100vh; 
+    position: relative;
 }
 
 .imagen {
-    width: 50%;
-    display: flex;
-    justify-content: center;
+    width: 100%; 
+    height: 80vh; 
+    position: relative;
+    perspective: 1200px; 
 }
 
-.imagen img {
+.flip-container {
     width: 100%;
-    max-width: 700px;
-    border-radius: 5px;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
 }
+
+.imagen:hover .flip-container {
+    transform: rotateY(180deg); 
+}
+
+.front, .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 10px; 
+    overflow: hidden;
+}
+
+.front img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+.back {
+    background: linear-gradient(135deg, #ff5e00, #ff9900, #0033cc, #2200aa);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    font-size: 1.5rem;
+    text-align: center;
+    transform: rotateY(180deg);
+    
+}
+.whatis h1 {
+    font-size: 3rem; 
+    font-weight: bold; 
+    text-align: center; 
+    color: #0033cc;
+}
+.back p {
+    font-size: 40px;
+    font-weight: 500;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); 
+    max-width: 80%;
+    margin: auto;
+}
+
 .carousel-inner  {
     width: 900px;
     margin-left: 20%;
