--- a/styles.css
+++ b/styles.css
@@ -265,11 +265,12 @@ section{
     padding: 20px;
     height: 100vh; 
     position: relative;
+    background: url('images/verde2.jpg');
 }
 
 .imagen {
     width: 100%; 
-    height: 80vh; 
+    height: 70vh; 
     position: relative;
     perspective: 1200px; 
 }
@@ -302,7 +303,7 @@ section{
 }
 
 .back {
-    background: linear-gradient(135deg, #ff5e00, #ff9900, #0033cc, #2200aa);
+    background-color: #000;
     color: white;
     display: flex;
     align-items: center;
