--- a/styles.css
+++ b/styles.css
@@ -429,47 +429,16 @@ section{
 
 .aboutUsTitle {
     text-align: center;
-    font-size: 3rem;
-    background: linear-gradient(90deg, #4A00E0, #8E2DE2);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: white; /* Para navegadores que no soportan text-fill-color */
-    font-weight: bold;
-}
-
-.aboutUsText {
-    text-align: center;
-    font-size: 1.2rem;
-    max-width: 800px;
-    margin: 20px auto;
-    line-height: 1.6;
+    font-size: 3.5rem;
     color: white;
 }
 
-.aboutUsImages {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.aboutUsImage {
-    width: 300px;
-    height: auto;
-    border-radius: 10px;
-    transition: transform 0.3s ease-in-out;
-}
-
-.aboutUsImage:hover {
-    transform: scale(1.1);
-}
 
 .buttonAboutUsTutorial {
     display: block;
     margin: 30px auto;
     padding: 15px 30px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     border: none;
     background: linear-gradient(90deg, #4A00E0, #8E2DE2);
     color: white;
@@ -488,28 +457,167 @@ section{
     100% { opacity: 1; transform: translateY(0); }
 }
 
+
+
 .aboutUsContainer {
     position: relative;
     width: 100%;
-    min-height: 100vh; /* Asegura que tenga altura suficiente */
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     padding: 50px 20px;
-    overflow: hidden; /* Evita desbordamiento */
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/aboutus3.jpg');
+    background-size: cover;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 2s ease-out, transform 2s ease-out;
 }
 
-.aboutUsContainer {
-    position: relative;
+.aboutUsContainer.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+#cards-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 60vh;
+    background: url('images/fondo_cards.jpg') no-repeat center center;
+    background-size: cover;
+    padding: 30px 10px;
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    max-width: 1500px;
+}
+
+.flip-card {
+    width: 300px;
+    height: 250px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
     width: 100%;
-    min-height: 10vh;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
     text-align: center;
-    padding: 50px 20px;
-    background: url('images/aboutus3.jpg') no-repeat center center;
-    background-size: cover; 
+    font-size: 1rem;
+    padding: 15px;
 }
 
+.flip-card-front {
+    background: rgba(142, 45, 226, 0.17);
+    color: white;
+}
+
+.flip-card-front img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.flip-card-back {
+    background: #000;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+#aboutus button {
+    margin: 10px;
+    padding: 20px 30px;
+    background: #00000036;
+    border: #fff solid 1px;
+    color: #fff;
+    display: inline-block;
+    transition: all 0.2s ease-in;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+#aboutus button:active {
+    color: #666;
+    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+#aboutus button:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.25);
+    top: 100%;
+    width: 140%;
+    height: 180%;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+}
+
+#aboutus button:after {
+    content: "";
+    position: absolute;
+    left: 55%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.45);
+    top: 180%;
+    width: 160%;
+    height: 190%;
+    background-color: #009087;
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+}
+
+#aboutus button:hover {
+    color: #000;
+    border: 1px solid #ffffff;
+    font-weight: 500;
+}
+
+#aboutus button:hover:before {
+    top: -35%;
+    background-color: #ffffff;
+    color: black;
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+    font-weight: 500;
+}
+
+#aboutus button:hover:after {
+    top: -45%;
+    background-color: #ffffff;
+    color: black;
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+    font-weight: 500;
+}
