--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ a:hover {
     top: 180%;
     width: 160%;
     height: 190%;
-    background-color: #009087;
+    background-color: #ffcc00;
     border-radius: 50%;
     display: block;
     transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -332,7 +332,7 @@ section{
     font-size: 2.5rem; 
     font-weight: bold;
     text-align: center;
-    color: #0033cc;
+    color: white;
     margin-bottom: 20px;
 }
 
@@ -544,13 +544,7 @@ section{
     padding-bottom: 50px; 
 }
 
-#aboutus, #whatis {
-    position: relative;
-    z-index: 1; 
-    background-color: rgba(0, 0, 0, 0.5); 
-    padding: 40px 20px;
-    color: white; 
-}
+
 
 #aboutus, #whatis, #tutorial, #preview, #collaborators {
     padding-top: 100px; 
@@ -617,7 +611,7 @@ section{
     top: 180%;
     width: 160%;
     height: 190%;
-    background-color: #009087;
+    background-color: #ffcc00;
     border-radius: 50%;
     display: block;
     transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -644,4 +638,9 @@ section{
     color: black;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
     font-weight: 500;
+}
+#background-container {
+    background: url('images/aboutus3.jpg') no-repeat center center fixed;
+    background-size: cover; 
+    padding-bottom: 50px; 
 }
