--- a/styles.css
+++ b/styles.css
@@ -43,21 +43,21 @@ a:hover {
 
 
 #principal h1 {
-    font-size: 4.5em;
+    font-size: 4.8em;
     padding-top: 35vh;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 
 #principal p {
-    font-size: 1.8em;
+    font-size: 1.5em;
     padding-top: 0px;
 
 }
 
 
 #principal button {
-    margin: 10px;
+    margin: 20px;
     padding: 15px 25px;
     background: #00000036;
     border: #fff solid 1px;
