--- a/styles.css
+++ b/styles.css
@@ -650,3 +650,8 @@ footer {
     background-color: rgba(19, 19, 19, 0.849);
     border-top: #c5c5c564 solid 1px;
 }
+#aboutus, #whatis, #tutorial, #preview, #collaborators {
+    box-shadow: 4px 4px 18px rgba(108, 108, 108, 0.541);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
