--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ a:hover {
 }
 
 
-#principal button {
+#principal .button {
     margin: 20px;
     padding: 15px 25px;
     background: #00000036;
@@ -69,14 +69,15 @@ a:hover {
     z-index: 1;
     cursor: pointer;
     font-size: 14px;
+    text-decoration: none
 }
 
-#principal button:active {
+#principal .button:active {
     color: #666;
     box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
 }
 
-#principal button:before {
+#principal .button:before {
     content: "";
     position: absolute;
     left: 50%;
@@ -91,7 +92,7 @@ a:hover {
     z-index: -1;
 }
 
-#principal button:after {
+#principal .button:after {
     content: "";
     position: absolute;
     left: 55%;
@@ -106,13 +107,13 @@ a:hover {
     z-index: -1;
 }
 
-#principal button:hover {
+#principal .button:hover {
     color: #000;
     border: 1px solid #ffffff;
     font-weight: 500;
 }
 
-#principal button:hover:before {
+#principal .button:hover:before {
     top: -35%;
     background-color: #ffffff;
     color: black;
@@ -120,7 +121,7 @@ a:hover {
     font-weight: 500;
 }
 
-#principal button:hover:after {
+#principal .button:hover:after {
     top: -45%;
     background-color: #ffffff;
     color: black;
@@ -307,6 +308,7 @@ section{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(0.7);
 }
 .back img {
     max-width: 30%; 
@@ -381,34 +383,38 @@ section{
 }
 
 .card-client {
-    background: rgba(70, 70, 70, 0.37);
-    border-radius: 10px;
-    padding: 20px;
+    background: linear-gradient(to bottom, rgba(50, 50, 50, 0.5), rgba(0, 0, 0, 0.6));
+    border-radius: 15px;
+    padding: 25px;
     text-align: center;
     margin: 20px 0;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s;
+    backdrop-filter: blur(6px);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .card-client:hover {
     transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(33, 145, 107, 0.5);
 }
 
 .user-picture img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
+    border: 2px solid #075246b4;
 }
 
 .name-client {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 .name-client span {
     display: block;
-    font-size: 14px;
+    font-size: 12px;
     color: #ddd;
 }
 
@@ -435,6 +441,14 @@ section{
 .show-tooltip {
     opacity: 1;
 }
+
+@media (min-width: 1400px) { /* Para pantallas extra grandes */
+    .col-xxl-2_4 {
+        flex: 0 0 20%;  /* 100% / 5 = 20% */
+        max-width: 20%;
+    }
+}
+
 
 #tutorial {
     text-align: center;
