--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,11 @@ a:hover {
         display: none;
         opacity: 0;
     }
+    .nav-left 
+    {
+        display: none;
+        opacity: 0;
+    }
     
 }
 
